--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,13 @@ jobs:
         run: flutter analyze
         continue-on-error: true
 
-      - run: flutter build apk --release --split-per-abi
-      - name: Push to Releases
+      - name: Build release APK (split per ABI)
+        run: flutter build apk --release --split-per-abi
+
+      - name: Push to GitHub Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          artifacts: "build/app/outputs/apk/release/app-arm64-v8a-release.apk,build/app/outputs/apk/release/app-armeabi-v7a-release.apk,build/app/outputs/apk/release/app-x86_64-release.apk"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 
